# Advent-of-Code

./: .gitignore  2022.ex  prep_files.py  pyproject.toml  readme.md
2015/: day1.md  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day16.py  day17.md  day17.py  day18.md  day18.py  day19.md  day19.py  day2.md  day2.py  day20.md  day20.py  day21.md  day21.py  day22.md  day22.py  day23.md  day23.py  day24.md  day24.py  day25.md  day3.md  day3.py  day4.md  day4.py  day5.md  (+9 more)
2016/: day1.md  day1.py  day10.md  day11.md  day11.py  day12.md  day13.md  day14.md  day14.py  day15.md  day16.md  day16.py  day17.md  day17.py  day18.md  day18.py  day19.md  day19.py  day2.md  day20.md  day20.py  day21.md  day22.md  day22.py  day23.md  day24.md  day24.py  day25.md  day3.md  day4.md  day4.py  day5.md  day6.md  day6.py  day7.md  day7.py  day8.md  day8.py  day9.md
2017/: circular.py  day1.md  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day16.py  day17.md  day17.py  day18.md  day18.py  day19.md  day19.py  day2.md  day2.py  day20.md  day20.py  day21.md  day21.py  day22.md  day22.py  day23.md  day23.py  day24.md  day25.md  day25.py  day3.md  day3.py  day4.md  day4.py  (+12 more)
2018/: day1.md  day10.md  day10.py  day11.md  day12.md  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day17.md  day18.md  day18.py  day19.md  day19.py  day2.md  day20.md  day21.md  day21.py  day22.md  day23.md  day23.py  day24.md  day25.md  day25.py  day3.md  day3.py  day4.md  day5.md  day5.py  day6.md  day7.md  day7.py  day8.md  day8.py  day9.md  day9.py
2019/: day1.md  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day13.py  day14.md  day15.md  day15.py  day16.md  day16.py  day17.md  day18.md  day18.py  day19.md  day19.py  day2.md  day2.py  day20.md  day21.md  day22.md  day22.py  day23.md  day23.py  day24.md  day24.py  day25.md  day25.py  day3.md  day3.py  day4.md  day4.py  day5.md  day5.py  day6.md  day6.py  day7.md  (+3 more)
2020/: day1.md  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.c  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day16.py  day17.md  day17.py  day18-1.py  day18-2.py  day18.md  day18.py  day19-1.txt  day19.md  day19.py  day2.md  day2.py  day20.md  day21.md  day21.py  day22.md  day22.py  day23.md  day24.md  day25.md  day25.py  day3.md  day3.py  day4.md  (+12 more)
2020/c/: day13-256.c  day13.c  s.h
2021/: day1.md  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day16.py  day17.md  day17.py  day18.md  day18.py  day19.md  day19.py  day2.md  day2.py  day20.md  day20.py  day21.md  day21.py  day22.md  day22.py  day23.md  day23.py  day24.md  day24.py  day25.md  day25.py  day3.md  day3.py  day4.md  day4.py  (+10 more)
2022/: day1.md  day1.nim  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day13.py  day14.md  day14.py  day15.md  day15.py  day16.md  day16.py  day17.md  day18.md  day18.py  day19.md  day19.py  day2  day2.md  day2.nim  day2.py  day20.md  day21.md  day21.py  day22.md  day23.md  day23.py  day24.md  day24.py  day25.md  day3.md  day3.nim  day3.py  day4.md  day4.py  (+10 more)
2023/: day1.md  day1.py  day10.md  day10.py  day11.md  day11.py  day12.md  day12.py  day13.md  day14.md  day15.md  day15.py  day16.md  day16.py  day17.md  day17.py  day18.md  day19.md  day2.md  day20.md  day20.py  day21.md  day22.md  day23.md  day24.md  day25.md  day26.py  day3.md  day3.py  day4.md  day4.py  day5.md  day5.py  day6.md  day6.py  day7.md  day7.py  day8.md  day8.py  day9.md  (+1 more)
elixir/: 2022.ex
nim/: day2.nim
prep_files/: prep_files.py  prep_files_scala.py  pyproject.toml  remember to init python year d.2do
python/: pyproject.toml
python/2015/: day1.py  day13.py  day16.py  day22.py  day3.py  day4.py  day7.py  day8.py  day9.py
python/2017/: circular.py  day1.py  day12.py  day15.py  day17.py  day2.py  day20.py  day6circular.py
python/2018/: day8.py  day9.py
python/2020/: day12.py  day14.py  day16.py  day18-2.py  day2.py  day4.py  day5.py  day6.py  day8.py
python/2021/: day14.py  day5.py  day7.py
python/2022/: day1.py  day13.py  day14.py  day3.py  day8.py  day9.py
python/2023/: day1.py  day10.loop  day10.py  day11.py  day14.py  day2.py  day3.py  day6.py  day7.py
python/advent2015/: day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day5.py  day9.py
python/advent2016/: day1.py  day5.py
python/advent2017/: day10.py  day11.py  day14.py  day18.py  day19.py  day5.py  day7.py  hexagon.py
python/advent2019/: day12.py  day18.py  day2.py  day21.py  day25.py  day4.py
python/advent2020/: day1.py  day10.py  day11.py  day13.py  day14.py  day16.py  day17.py  day19.py  day3.py  day7.py  day8.py  day9.py
python/advent2020/c/: advent
python/advent2021/: day1.py  day11.py  day12.py  day13.py  day15.py  day17.py  day2.py  day4.py  day5.py  day9.py
python/advent2022/: day10.py  day12.py  day15.py  day2.py  day4.py  day5.py  day7.py
python/advent2023/: day10.py  day12.py  day4.py  day5.py  day7.py
python/advent2024/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
scala/: pyproject.toml
scala/2017/: day11.sc  day19.sc
scala/2018/: day20.sc
scala/2020/: day1.sc  day16.sc  day2.sc
scala/2021/: day14.sc  day18.sc
scala/2022/: day12.sc  day21.sc  day4.sc
scala/advent2015/: day25.sc
scala/advent2016/: day5.sc  day8.sc
scala/advent2017/: day10.sc  day13.sc  day9.sc
scala/advent2019/: day22.sc  day23.sc  day6.sc
scala/advent2021/: day15.sc  day3.sc
scala/advent2022/: day17.sc  day24.sc  day7.sc
zig/: build.zig  prep_files.py
zig/2016/: all.zig  day1.zig  day11.zig  day6.zig
zig/advent2016/: day16.zig
zig/src/: main.zig
zig/src/2016/: day15.zig  day20.zig
zig/src/2017/: day22.zig  day25.zig  day5.zig  day9.zig
zig/src/2018/: day21.zig
zig/src/2020/: day17.zig  (+1 more)
(+15 files in other folders)
