[tool.poetry]
name = "Advent of Code"
version = "1.0.0"
description = "Mixture of good and terrible solutions, often one-liners and obtuse on purpose"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
numpy = "^1.26.0"
requests = "^2.31.0"
pendulum = "^3.0.0"
markdownify = "^0.11.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
format.line-ending = "lf"
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "C90", "INP", "ERA001", "CPY", "TD003", "S311", "T201", "W191", "E111", "E114", "E117", "E203", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
