[project]
name = "Advent-of-Code"
description = "Solutions for Advent of Code in various language (mostly Python)"
version = "2025"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [{ name = "AlexBlandin" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas", "attrs", "cattrs", "tqdm", "requests", "whenever", "markdownify"]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Documentation = "https://github.com/alexblandin/Advent-of-Code#readme"
Issues = "https://github.com/alexblandin/Advent-of-Code/issues"
Source = "https://github.com/alexblandin/Advent-of-Code"

[tool.ruff]
indent-width = 2
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  # "T20",    # print is good, actually 
  "D202",   # a little vertical separation can be nice
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
